...
                .buttonStyle(.bordered)
                .tint(.white)

                Button {
                    viewModel.startSpelling()
                } label: {
                    Text("Spell It!")
                        .font(.caption2)
                        .frame(maxWidth: .infinity)
                }
                .buttonStyle(.borderedProminent)
                .tint(.cyan)
            }
...
